--- a/htmls/group.html
+++ b/htmls/group.html
@@ -31,18 +31,17 @@
         .members-list {
             flex: 0 0 300px;
             background: rgba(255, 255, 255, 0.95);
-            padding: 2rem;
+            padding: 1.5rem;
             border-radius: 10px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            max-height: 600px;
-            overflow-y: auto;
+            height: fit-content;
         }
 
         .members-list h3 {
             margin-top: 0;
-            margin-bottom: 1.5rem;
+            margin-bottom: 1rem;
             color: #333;
-            font-size: 1.5rem;
+            font-size: 1.2rem;
             border-bottom: 2px solid #007bff;
             padding-bottom: 0.5rem;
         }
@@ -51,31 +50,16 @@
             list-style: none;
             padding: 0;
             margin: 0;
+            columns: 2;
+            column-gap: 1rem;
         }
 
         .members-list li {
-            padding: 0.5rem 0;
-            border-bottom: 1px solid #eee;
+            padding: 0.25rem 0;
             color: #555;
-            font-size: 0.9rem;
-        }
-
-        .members-list li:last-child {
-            border-bottom: none;
-        }
-
-        .members-list::-webkit-scrollbar {
-            width: 8px;
-        }
-
-        .members-list::-webkit-scrollbar-track {
-            background: #f1f1f1;
-            border-radius: 10px;
-        }
-
-        .members-list::-webkit-scrollbar-thumb {
-            background: #007bff;
-            border-radius: 10px;
+            font-size: 0.65rem;
+            break-inside: avoid;
+            line-height: 1.4;
         }
 
         @media (max-width: 768px) {
@@ -86,7 +70,10 @@
             .members-list {
                 flex: 1;
                 width: 100%;
-                max-height: 400px;
+            }
+
+            .members-list ul {
+                columns: 1;
             }
         }
     </style>
