--- a/htmls/group.html
+++ b/htmls/group.html
@@ -25,12 +25,25 @@
         }
 
         .group-content {
-            flex: 1;
+            flex: 0 0 350px;
             padding-top: 2rem;
+            text-align: left;
+        }
+
+        .group-title {
+            font-size: 2.5rem;
+            margin-bottom: 1rem;
+            color: #ff6b35;
+        }
+
+        .group-description {
+            font-size: 1rem;
+            line-height: 1.6;
+            color: #333;
         }
 
         .members-list {
-            flex: 0 0 300px;
+            flex: 1;
             background: rgba(255, 255, 255, 0.75);
             padding: 1.5rem;
             border-radius: 10px;
@@ -67,6 +80,11 @@
         @media (max-width: 768px) {
             .group-container {
                 flex-direction: column;
+            }
+
+            .group-content {
+                flex: 1;
+                width: 100%;
             }
 
             .members-list {
