--- a/htmls/group.html
+++ b/htmls/group.html
@@ -25,21 +25,27 @@
         }
 
         .group-content {
-            flex: 0 0 350px;
-            padding-top: 2rem;
+            flex: 0 0 400px;
+            padding: 2rem;
             text-align: left;
+            background: rgba(255, 255, 255, 0.9);
+            border-radius: 10px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            backdrop-filter: blur(5px);
+            order: 2;
         }
 
         .group-title {
             font-size: 2.5rem;
             margin-bottom: 1rem;
             color: #ff6b35;
+            font-weight: bold;
         }
 
         .group-description {
-            font-size: 1rem;
-            line-height: 1.6;
-            color: #333;
+            font-size: 1.1rem;
+            line-height: 1.8;
+            color: #222;
         }
 
         .members-list {
@@ -50,6 +56,7 @@
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             height: fit-content;
             backdrop-filter: blur(5px);
+            order: 1;
         }
 
         .members-list h3 {
