--- a/htmls/group.html
+++ b/htmls/group.html
@@ -10,7 +10,7 @@
         .group-section {
             display: flex;
             align-items: flex-start;
-            justify-content: flex-start;
+            justify-content: center;
             min-height: 80vh;
             padding: 2rem;
             position: relative;
@@ -18,70 +18,69 @@
 
         .group-container {
             display: flex;
-            gap: 3rem;
-            max-width: 1200px;
+            gap: 2rem;
+            max-width: 1400px;
             width: 100%;
             align-items: flex-start;
-        }
-
-        .group-content {
-            flex: 0 0 400px;
-            padding: 2rem;
-            text-align: left;
-            background: rgba(255, 255, 255, 0.9);
-            border-radius: 10px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            backdrop-filter: blur(5px);
-            order: 2;
-        }
-
-        .group-title {
-            font-size: 2.5rem;
-            margin-bottom: 1rem;
-            color: #ff6b35;
-            font-weight: bold;
-        }
-
-        .group-description {
-            font-size: 1.1rem;
-            line-height: 1.8;
-            color: #222;
+            justify-content: space-between;
         }
 
         .members-list {
-            flex: 1;
-            background: rgba(255, 255, 255, 0.75);
-            padding: 1.5rem;
-            border-radius: 10px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            flex: 0 0 200px;
+            background: rgba(255, 255, 255, 0.85);
+            padding: 1rem;
+            border-radius: 8px;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
             height: fit-content;
-            backdrop-filter: blur(5px);
-            order: 1;
+            backdrop-filter: blur(8px);
+            max-height: 600px;
+            overflow-y: auto;
         }
 
         .members-list h3 {
             margin-top: 0;
-            margin-bottom: 1rem;
+            margin-bottom: 0.75rem;
             color: #333;
-            font-size: 1.2rem;
+            font-size: 0.9rem;
             border-bottom: 2px solid #007bff;
-            padding-bottom: 0.5rem;
+            padding-bottom: 0.4rem;
+            font-weight: bold;
         }
 
         .members-list ul {
             list-style: none;
             padding: 0;
             margin: 0;
-            columns: 2;
-            column-gap: 1rem;
         }
 
         .members-list li {
-            padding: 0.25rem 0;
-            color: #555;
-            font-size: 0.65rem;
-            break-inside: avoid;
-            line-height: 1.4;
+            padding: 0.2rem 0;
+            color: #444;
+            font-size: 0.55rem;
+            line-height: 1.3;
+        }
+
+        .group-content {
+            flex: 0 0 280px;
+            padding: 1.5rem;
+            text-align: left;
+            background: rgba(255, 255, 255, 0.85);
+            border-radius: 8px;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
+            backdrop-filter: blur(8px);
+        }
+
+        .group-title {
+            font-size: 1.8rem;
+            margin-bottom: 0.75rem;
+            color: #ff6b35;
+            font-weight: bold;
+        }
+
+        .group-description {
+            font-size: 0.85rem;
+            line-height: 1.6;
+            color: #333;
         }
 
         @media (max-width: 768px) {
@@ -89,18 +88,15 @@
                 flex-direction: column;
             }
 
-            .group-content {
-                flex: 1;
-                width: 100%;
-            }
-
+            .group-content,
             .members-list {
                 flex: 1;
                 width: 100%;
+                max-width: 100%;
             }
 
-            .members-list ul {
-                columns: 1;
+            .members-list {
+                max-height: 400px;
             }
         }
     </style>
@@ -129,12 +125,6 @@
     <!-- GROUP SECTION WITH FULL BACKGROUND -->
     <section class="group-section">
         <div class="group-container">
-            <div class="group-content">
-                <h2 class="group-title">Dyislers</h2>
-                <p class="group-description">
-                    My amazing coding team. Together we solve problems, build projects, and create innovative solutions. United by our passion for technology and friendship.
-                </p>
-            </div>
             <div class="members-list">
                 <h3>Team Members</h3>
                 <ul>
@@ -179,6 +169,12 @@
                     <li>UMAGING, KAZLER CARL</li>
                     <li>VENTURA, JAMAL</li>
                 </ul>
+            </div>
+            <div class="group-content">
+                <h2 class="group-title">Dyislers</h2>
+                <p class="group-description">
+                    My amazing coding team. Together we solve problems, build projects, and create innovative solutions. United by our passion for technology and friendship.
+                </p>
             </div>
         </div>
     </section>
