--- a/htmls/group.html
+++ b/htmls/group.html
@@ -84,7 +84,7 @@
         }
 
         @media (max-width: 768px) {
-            .group-container {
+            .top-section {
                 flex-direction: column;
             }
 
@@ -125,50 +125,52 @@
     <!-- GROUP SECTION WITH FULL BACKGROUND -->
     <section class="group-section">
         <div class="group-container">
-            <div class="members-list">
-                <h3>Team Members</h3>
-                <ul>
-                    <li>ABANCE</li>
-                    <li>ALVINABIADO, MARK JHON</li>
-                    <li>BACUN, JOHANNA CHRISTINE</li>
-                    <li>BANGGUIYAO, MARK KEVIN</li>
-                    <li>BARRIOGA, ESTEBAN JR.</li>
-                    <li>BEKISAN, SHANIA FAITH</li>
-                    <li>BUCATAN, JANRYL</li>
-                    <li>BULLAGAY, HEZEKIAH</li>
-                    <li>CASTELLANO, KATHERINE NICOLLE</li>
-                    <li>CELINO, LAWRENCE DAVE</li>
-                    <li>COSTINA, EUGENE REY</li>
-                    <li>DULNUAN, JESSIE</li>
-                    <li>EKWASEN, JAN MARK</li>
-                    <li>ESTEPA, BENCY BLUE</li>
-                    <li>FERNANDEZ, SAM ARCHER</li>
-                    <li>KINDAHAN, JOSHUA</li>
-                    <li>LICUPA, JEREMIE CRAIG</li>
-                    <li>LISKING, GYAHN</li>
-                    <li>LUNAG, AZRIEL JARED</li>
-                    <li>MARKUB, JUSTIN</li>
-                    <li>NAGEN, IVAN TROY</li>
-                    <li>NOVENTA, GLAIZA MAE</li>
-                    <li>ONNON, BRIAN BRUCE</li>
-                    <li>PADIOS, JIMUEL</li>
-                    <li>PANELO, PRINCE MARKY</li>
-                    <li>PANES, RALPH MATTHEW</li>
-                    <li>PATAUEG, JEHNNIE LYN</li>
-                    <li>QUINTINITA, LANZ JYR</li>
-                    <li>QUIROS, JECARED</li>
-                    <li>REQUIERO, JAY-R</li>
-                    <li>RICO, LOUIS INIGO</li>
-                    <li>SAGAPEN, BENJAMIN</li>
-                    <li>SAN PEDRO, RALPH MATTHEW</li>
-                    <li>SANTIAGO, ARTHUR JOHN</li>
-                    <li>SARMIENTO, JUSTINE VON</li>
-                    <li>SOLEY, LEAN JOBELLE</li>
-                    <li>TACIO, REYAN</li>
-                    <li>TALIC, KARIANNE CLARISSE</li>
-                    <li>UMAGING, KAZLER CARL</li>
-                    <li>VENTURA, JAMAL</li>
-                </ul>
+            <div class="top-section">
+                <div class="members-list">
+                    <h3>Team Members</h3>
+                    <ul>
+                        <li>ABANCE</li>
+                        <li>ALVINABIADO, MARK JHON</li>
+                        <li>BACUN, JOHANNA CHRISTINE</li>
+                        <li>BANGGUIYAO, MARK KEVIN</li>
+                        <li>BARRIOGA, ESTEBAN JR.</li>
+                        <li>BEKISAN, SHANIA FAITH</li>
+                        <li>BUCATAN, JANRYL</li>
+                        <li>BULLAGAY, HEZEKIAH</li>
+                        <li>CASTELLANO, KATHERINE NICOLLE</li>
+                        <li>CELINO, LAWRENCE DAVE</li>
+                        <li>COSTINA, EUGENE REY</li>
+                        <li>DULNUAN, JESSIE</li>
+                        <li>EKWASEN, JAN MARK</li>
+                        <li>ESTEPA, BENCY BLUE</li>
+                        <li>FERNANDEZ, SAM ARCHER</li>
+                        <li>KINDAHAN, JOSHUA</li>
+                        <li>LICUPA, JEREMIE CRAIG</li>
+                        <li>LISKING, GYAHN</li>
+                        <li>LUNAG, AZRIEL JARED</li>
+                        <li>MARKUB, JUSTIN</li>
+                        <li>NAGEN, IVAN TROY</li>
+                        <li>NOVENTA, GLAIZA MAE</li>
+                        <li>ONNON, BRIAN BRUCE</li>
+                        <li>PADIOS, JIMUEL</li>
+                        <li>PANELO, PRINCE MARKY</li>
+                        <li>PANES, RALPH MATTHEW</li>
+                        <li>PATAUEG, JEHNNIE LYN</li>
+                        <li>QUINTINITA, LANZ JYR</li>
+                        <li>QUIROS, JECARED</li>
+                        <li>REQUIERO, JAY-R</li>
+                        <li>RICO, LOUIS INIGO</li>
+                        <li>SAGAPEN, BENJAMIN</li>
+                        <li>SAN PEDRO, RALPH MATTHEW</li>
+                        <li>SANTIAGO, ARTHUR JOHN</li>
+                        <li>SARMIENTO, JUSTINE VON</li>
+                        <li>SOLEY, LEAN JOBELLE</li>
+                        <li>TACIO, REYAN</li>
+                        <li>TALIC, KARIANNE CLARISSE</li>
+                        <li>UMAGING, KAZLER CARL</li>
+                        <li>VENTURA, JAMAL</li>
+                    </ul>
+                </div>
             </div>
             <div class="group-content">
                 <h2 class="group-title">Dyislers</h2>
