--- a/htmls/group.html
+++ b/htmls/group.html
@@ -9,8 +9,8 @@
     <style>
         .group-section {
             display: flex;
-            align-items: flex-start;
-            justify-content: center;
+            align-items: flex-end;
+            justify-content: flex-start;
             min-height: 80vh;
             padding: 2rem;
             position: relative;
@@ -21,8 +21,8 @@
             gap: 2rem;
             max-width: 1400px;
             width: 100%;
-            align-items: flex-start;
-            justify-content: space-between;
+            align-items: flex-end;
+            justify-content: flex-start;
         }
 
         .members-list {
@@ -33,8 +33,6 @@
             box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
             height: fit-content;
             backdrop-filter: blur(8px);
-            max-height: 600px;
-            overflow-y: auto;
         }
 
         .members-list h3 {
@@ -93,10 +91,6 @@
                 flex: 1;
                 width: 100%;
                 max-width: 100%;
-            }
-
-            .members-list {
-                max-height: 400px;
             }
         }
     </style>
