--- a/htmls/group.html
+++ b/htmls/group.html
@@ -123,7 +123,7 @@
                 <div class="members-list">
                     <h3>Team Members</h3>
                     <ul>
-                        <li>ABANCE</li>
+                        <li>ABANCE, ALVIN</li>
                         <li>ALVINABIADO, MARK JHON</li>
                         <li>BACUN, JOHANNA CHRISTINE</li>
                         <li>BANGGUIYAO, MARK KEVIN</li>
@@ -176,3 +176,4 @@
     </section>
 </body>
 </html>
+
